MDEV-22108 Recovery fails with InnoDB: Malformed log record

mtr_t::log_write(): Fix an off-by-one error.